--- a/index.html
+++ b/index.html
@@ -15,37 +15,9 @@
         <section>
           <h2>Pesquise abaixo a fruta, verdura ou vegetal desejado e descubra sua disponibilidade</h2>
             <input type="text" placeholder="Digite o alimento desejado.">
-            <button>Pesquisar</button>
+            <button onclick="pesquisar()">Pesquisar</button>
         </section>
-        <section class="resultados-pesquisa">
-            <div class="item-resultado">
-                <h2>
-                    <a href="#" target="_blank">Cenoura</a>
-                </h2>
-                <p class="descricao-meta">A cenoura, com sua vibrante cor alaranjada, é muito mais do que um simples legume. Rica em betacaroteno, que nosso corpo transforma em vitamina A, ela é fundamental para a saúde dos olhos, da pele e do sistema imunológico. Além disso, suas fibras contribuem para uma boa digestão e ajudam a controlar o colesterol. Versátil na cozinha, a cenoura pode ser consumida crua, cozida, ralada ou em sucos, adicionando sabor e nutrientes a diversas receitas.</p>
-    
-                <p class="descricao-meta">Segundo a CEAGESP, a cenoura pode ser encontrada em nossos mercados praticamente o ano todo. No entanto, sua sazonalidade influencia diretamente seu sabor e preço. Durante o inverno, por exemplo, a cenoura costuma apresentar um sabor mais doce e intenso, tornando-a ainda mais apreciada nessa época do ano. Ao escolher suas cenouras, opte por aquelas com cor uniforme, sem manchas e com a raiz firme.</p>
-                    <a href="https://ceagesp.gov.br/pesquisar/cenoura" target="_blank">SAIBA MAIS</a>
-            </div>
-
-            <div class="item-resultado">
-                <h2>
-                    <a href="#" target="_blank">Brócolis</a>
-                </h2>
-                <p class="descricao-meta">O brócolis é um vegetal crucífero rico em nutrientes essenciais, como vitaminas C e K, além de minerais como ferro e potássio. Sua cor verde vibrante indica um alto teor de clorofila, um pigmento com propriedades antioxidantes. O brócolis é uma excelente fonte de fibras, o que auxilia na digestão e promove a sensação de saciedade. Além disso, ele contém sulforafano, um composto com propriedades anticancerígenas. O brócolis pode ser consumido cozido no vapor, refogado ou cru em saladas, adicionando um toque de sabor e cor aos pratos.</p>
-                <p>O brócolis pode ser encontrado em supermercados durante todo o ano, mas sua sazonalidade pode influenciar o preço e a qualidade. As melhores épocas para encontrar brócolis frescos e com sabor mais intenso são a primavera e o outono.</p>
-                <a href="https://ceagesp.gov.br/pesquisar/brocolis" target="_blank">SAIBA MAIS</a>
-            </div>
-
-            <div class="item-resultado">
-                <h2>
-                    <a href="#" target="_blank">Tomate</a>
-                </h2>
-                <p class="descricao-meta">O tomate é uma fruta rica em licopeno, um pigmento antioxidante que confere a ele sua cor vermelha característica. Além do licopeno, o tomate é uma excelente fonte de vitaminas A e C, potássio e fibras. Sua versatilidade culinária é inegável, podendo ser consumido in natura, em saladas, molhos, sucos e diversas outras preparações. O tomate é um ingrediente fundamental da dieta mediterrânea e está associado à prevenção de diversas doenças, como doenças cardíacas e alguns tipos de câncer.</p>
-                <p>A sazonalidade do tomate varia de acordo com a região, mas em geral, as melhores épocas para encontrar tomates frescos e saborosos são o verão e o outono. Nesses períodos, os tomates tendem a ser mais suculentos e saborosos.</p>
-                <a href="https://ceagesp.gov.br/pesquisar/tomate" target="_blank">SAIBA MAIS</a>
-            </div>
-           
+        <section class="resultados-pesquisa" id="resultados-pesquisa">          
         </section>
     </main>
     <footer>
